modified: css/main.css -- updated cssrules for sticky footer (trying to prevent from drawing offscreen)

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .wrapper {
-    min-height: calc(100vh - 50px);
+    min-height: calc(100vh - 150px);
 }
 footer {
     height: 50px;
